refactor: auth user controller refactor
